--- a/environment.yml
+++ b/environment.yml
@@ -80,6 +80,7 @@ dependencies:
       - scipy==1.10.1
       - sympy==1.12
       - torch==2.0.1
+      - torchmetrics==0.11.4
       - torchvision==0.15.2
       - tqdm==4.65.0
       - triton==2.0.0
