--- a/environment.yml
+++ b/environment.yml
@@ -44,6 +44,8 @@ dependencies:
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.5=hc292b87_0
   - pip:
+      - absl-py==1.4.0
+      - cachetools==5.3.1
       - certifi==2023.5.7
       - charset-normalizer==3.1.0
       - cmake==3.26.3
@@ -51,11 +53,16 @@ dependencies:
       - cycler==0.11.0
       - filelock==3.12.0
       - fonttools==4.39.4
+      - google-auth==2.19.1
+      - google-auth-oauthlib==1.0.0
+      - grpcio==1.54.2
       - idna==3.4
+      - importlib-metadata==6.6.0
       - importlib-resources==5.12.0
       - jinja2==3.1.2
       - kiwisolver==1.4.4
       - lit==16.0.5
+      - markdown==3.4.3
       - markupsafe==2.1.2
       - matplotlib==3.7.1
       - mpmath==1.3.0
@@ -71,14 +78,22 @@ dependencies:
       - nvidia-cusparse-cu11==11.7.4.91
       - nvidia-nccl-cu11==2.14.3
       - nvidia-nvtx-cu11==11.7.91
+      - oauthlib==3.2.2
       - packaging==23.1
       - pandas==2.0.2
+      - protobuf==4.23.2
+      - pyasn1==0.5.0
+      - pyasn1-modules==0.3.0
       - pyparsing==3.0.9
       - python-dateutil==2.8.2
       - pytz==2023.3
       - requests==2.31.0
+      - requests-oauthlib==1.3.1
+      - rsa==4.9
       - scipy==1.10.1
       - sympy==1.12
+      - tensorboard==2.13.0
+      - tensorboard-data-server==0.7.0
       - torch==2.0.1
       - torchmetrics==0.11.4
       - torchvision==0.15.2
@@ -86,6 +101,7 @@ dependencies:
       - triton==2.0.0
       - typing-extensions==4.6.2
       - tzdata==2023.3
-      - urllib3==2.0.2
+      - urllib3==1.26.16
+      - werkzeug==2.3.6
       - zipp==3.15.0
 prefix: /home/tom/miniconda3/envs/MA
