--- a/environment.yml
+++ b/environment.yml
@@ -45,6 +45,7 @@ dependencies:
   - zstd=1.5.5=hc292b87_0
   - pip:
       - absl-py==1.4.0
+      - antlr4-python3-runtime==4.9.3
       - cachetools==5.3.1
       - certifi==2023.5.7
       - charset-normalizer==3.1.0
@@ -56,6 +57,7 @@ dependencies:
       - google-auth==2.19.1
       - google-auth-oauthlib==1.0.0
       - grpcio==1.54.2
+      - hydra-core==1.3.2
       - idna==3.4
       - importlib-metadata==6.6.0
       - importlib-resources==5.12.0
@@ -79,6 +81,7 @@ dependencies:
       - nvidia-nccl-cu11==2.14.3
       - nvidia-nvtx-cu11==11.7.91
       - oauthlib==3.2.2
+      - omegaconf==2.3.0
       - packaging==23.1
       - pandas==2.0.2
       - protobuf==4.23.2
@@ -87,6 +90,7 @@ dependencies:
       - pyparsing==3.0.9
       - python-dateutil==2.8.2
       - pytz==2023.3
+      - pyyaml==6.0
       - requests==2.31.0
       - requests-oauthlib==1.3.1
       - rsa==4.9
@@ -95,6 +99,7 @@ dependencies:
       - tensorboard==2.13.0
       - tensorboard-data-server==0.7.0
       - torch==2.0.1
+      - torch-tb-profiler==0.4.1
       - torchmetrics==0.11.4
       - torchvision==0.15.2
       - tqdm==4.65.0
