--- a/environment.yml
+++ b/environment.yml
@@ -53,20 +53,25 @@ dependencies:
       - contourpy==1.0.7
       - cycler==0.11.0
       - filelock==3.12.0
+      - fire==0.5.0
       - fonttools==4.39.4
       - google-auth==2.19.1
       - google-auth-oauthlib==1.0.0
       - grpcio==1.54.2
       - hydra-core==1.3.2
       - idna==3.4
+      - imageio==2.31.1
       - importlib-metadata==6.6.0
       - importlib-resources==5.12.0
       - jinja2==3.1.2
+      - joblib==1.2.0
       - kiwisolver==1.4.4
+      - lazy-loader==0.2
       - lit==16.0.5
       - markdown==3.4.3
       - markupsafe==2.1.2
       - matplotlib==3.7.1
+      - medmnist==2.2.2
       - mpmath==1.3.0
       - networkx==3.1
       - nvidia-cublas-cu11==11.10.3.66
@@ -90,14 +95,20 @@ dependencies:
       - pyparsing==3.0.9
       - python-dateutil==2.8.2
       - pytz==2023.3
+      - pywavelets==1.4.1
       - pyyaml==6.0
       - requests==2.31.0
       - requests-oauthlib==1.3.1
       - rsa==4.9
+      - scikit-image==0.21.0
+      - scikit-learn==1.2.2
       - scipy==1.10.1
       - sympy==1.12
       - tensorboard==2.13.0
       - tensorboard-data-server==0.7.0
+      - termcolor==2.3.0
+      - threadpoolctl==3.1.0
+      - tifffile==2023.4.12
       - torch==2.0.1
       - torch-tb-profiler==0.4.1
       - torchmetrics==0.11.4
@@ -109,4 +120,4 @@ dependencies:
       - urllib3==1.26.16
       - werkzeug==2.3.6
       - zipp==3.15.0
-prefix: /home/tom/miniconda3/envs/MA
+prefix: /home/bay1989/miniconda3/envs/MA
