--- a/environment.yml
+++ b/environment.yml
@@ -46,6 +46,8 @@ dependencies:
   - pip:
       - absl-py==1.4.0
       - antlr4-python3-runtime==4.9.3
+      - beautifulsoup4==4.12.2
+      - biopython==1.81
       - cachetools==5.3.1
       - certifi==2023.5.7
       - charset-normalizer==3.1.0
@@ -55,6 +57,8 @@ dependencies:
       - filelock==3.12.0
       - fire==0.5.0
       - fonttools==4.39.4
+      - gdown==4.7.1
+      - genomic-benchmarks==0.0.9
       - google-auth==2.19.1
       - google-auth-oauthlib==1.0.0
       - grpcio==1.54.2
@@ -73,6 +77,7 @@ dependencies:
       - matplotlib==3.7.1
       - medmnist==2.2.2
       - mpmath==1.3.0
+      - multidict==6.0.4
       - networkx==3.1
       - nvidia-cublas-cu11==11.10.3.66
       - nvidia-cuda-cupti-cu11==11.7.101
@@ -93,6 +98,7 @@ dependencies:
       - pyasn1==0.5.0
       - pyasn1-modules==0.3.0
       - pyparsing==3.0.9
+      - pysocks==1.7.1
       - python-dateutil==2.8.2
       - pytz==2023.3
       - pywavelets==1.4.1
@@ -103,6 +109,7 @@ dependencies:
       - scikit-image==0.21.0
       - scikit-learn==1.2.2
       - scipy==1.10.1
+      - soupsieve==2.4.1
       - sympy==1.12
       - tensorboard==2.13.0
       - tensorboard-data-server==0.7.0
@@ -111,7 +118,9 @@ dependencies:
       - tifffile==2023.4.12
       - torch==2.0.1
       - torch-tb-profiler==0.4.1
+      - torchdata==0.6.1
       - torchmetrics==0.11.4
+      - torchtext==0.15.2
       - torchvision==0.15.2
       - tqdm==4.65.0
       - triton==2.0.0
@@ -119,5 +128,6 @@ dependencies:
       - tzdata==2023.3
       - urllib3==1.26.16
       - werkzeug==2.3.6
+      - yarl==1.9.2
       - zipp==3.15.0
 prefix: /home/bay1989/miniconda3/envs/MA
