--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -10,6 +10,10 @@ data_params:
   classes: 1
   isic_mean: [0.8111, 0.5782, 0.4839] # [1.2721, 0.3341, -0.0479]
   isic_std: [0.1698, 0.1773, 0.2120] # [0.2508, 0.2654, 0.3213]
+  isic_4000_mean: [0.6884, 0.5511, 0.5531]
+  isic_4000_std: [0.3999, 0.3287, 0.3424]
+  isic_resize_85_mean: [0.8457, 0.6837, 0.6727]
+  isic_resize_85_std: [0.1409, 0.1405, 0.1739]
 
 isic_paths:
   isic_data_path: ${hydra:runtime.cwd}/data/ISIC/data
