--- a/environment.yml
+++ b/environment.yml
@@ -48,9 +48,12 @@ dependencies:
       - antlr4-python3-runtime==4.9.3
       - beautifulsoup4==4.12.2
       - biopython==1.81
+      - boto3==1.28.1
+      - botocore==1.31.1
       - cachetools==5.3.1
       - certifi==2023.5.7
       - charset-normalizer==3.1.0
+      - click==8.1.4
       - cmake==3.26.3
       - contourpy==1.0.7
       - cycler==0.11.0
@@ -68,6 +71,7 @@ dependencies:
       - importlib-metadata==6.6.0
       - importlib-resources==5.12.0
       - jinja2==3.1.2
+      - jmespath==1.0.1
       - joblib==1.2.0
       - kiwisolver==1.4.4
       - lazy-loader==0.2
@@ -103,12 +107,16 @@ dependencies:
       - pytz==2023.3
       - pywavelets==1.4.1
       - pyyaml==6.0
+      - regex==2023.6.3
       - requests==2.31.0
       - requests-oauthlib==1.3.1
       - rsa==4.9
+      - s3transfer==0.6.1
+      - sacremoses==0.0.53
       - scikit-image==0.21.0
       - scikit-learn==1.2.2
       - scipy==1.10.1
+      - sentencepiece==0.1.99
       - soupsieve==2.4.1
       - sympy==1.12
       - tensorboard==2.13.0
