--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,6 +1,7 @@
 defaults:
   - _self_
   - experiment: base
+  - preprocessing: cifar
 
 isic_paths:
   isic_data_path: ${hydra:runtime.cwd}/data/ISIC/data
