--- a/setup.cfg
+++ b/setup.cfg
@@ -33,3 +33,17 @@ zip_safe = no
 
 [options.packages.find]
 where=src
+
+[options.extras_require]
+testing =
+    pytest>=6.0
+    pytest-cov>=2.0
+    mypy>=0.910
+    flake8>=3.9
+    tox>=3.24
+
+[options.package_data]
+Masterarbeit = py.typed
+
+[flake8]
+max-line-length = 160
