--- a/requirements.txt
+++ b/requirements.txt
@@ -6,21 +6,24 @@ biopython==1.81
 boto3==1.28.1
 botocore==1.31.1
 cachetools==5.3.1
-certifi==2023.5.7
+certifi==2024.2.2
 charset-normalizer==3.1.0
 click==8.1.4
 cmake==3.26.3
 contourpy==1.0.7
+coverage==7.4.3
 cycler==0.11.0
 dacite==1.8.1
-filelock==3.12.0
+distlib==0.3.8
+filelock==3.13.1
 fire==0.5.0
-fonttools==4.39.4
+flake8==3.9.2
+fonttools==4.49.0
 gdown==4.7.1
 genomic-benchmarks==0.0.9
 google-auth==2.19.1
 google-auth-oauthlib==1.0.0
-grpcio==1.54.2
+grpcio==1.62.0
 htmlmin==0.1.12
 hydra-core==1.3.2
 idna==3.4
@@ -28,6 +31,7 @@ ImageHash==4.3.1
 imageio==2.31.1
 importlib-metadata==6.6.0
 importlib-resources==5.12.0
+iniconfig==2.0.0
 iterative-stratification==0.1.7
 Jinja2==3.1.2
 jmespath==1.0.1
@@ -37,7 +41,9 @@ lazy_loader==0.2
 lit==16.0.5
 Markdown==3.4.3
 MarkupSafe==2.1.2
+-e git+https://github.com/Tombo93/masterarbeit.git@09bee3009dc998e5a72d268830732aeef4fc8843#egg=Masterarbeit
 matplotlib==3.7.1
+mccabe==0.6.1
 medmnist==2.2.2
 mkl-fft==1.3.1
 mkl-random @ file:///tmp/build/80754af9/mkl_random_1626186064646/work
@@ -45,6 +51,8 @@ mkl-service==2.4.0
 mpmath==1.3.0
 multidict==6.0.4
 multimethod==1.9.1
+mypy==0.910
+mypy-extensions==0.4.4
 networkx==3.1
 numpy @ file:///croot/numpy_and_numpy_base_1672336185480/work
 nvidia-cublas-cu11==11.10.3.66
@@ -65,13 +73,20 @@ pandas==2.0.2
 pandas-profiling==3.6.6
 patsy==0.5.3
 phik==0.12.3
-Pillow==9.4.0
+pillow==10.2.0
+platformdirs==4.2.0
+pluggy==1.4.0
 protobuf==4.23.2
+py==1.11.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pycodestyle==2.7.0
 pydantic==1.10.12
+pyflakes==2.3.1
 pyparsing==3.0.9
 PySocks==1.7.1
+pytest==6.2.5
+pytest-cov==2.12.1
 python-dateutil==2.8.2
 pytz==2023.3
 PyWavelets==1.4.1
@@ -97,18 +112,21 @@ tensorboard-data-server==0.7.0
 termcolor==2.3.0
 threadpoolctl==3.1.0
 tifffile==2023.4.12
+toml==0.10.2
 torch==2.0.1
 torch-tb-profiler==0.4.1
 torchdata==0.6.1
 torchmetrics==0.11.4
 torchtext==0.15.2
 torchvision==0.15.2
+tox==3.24.3
 tqdm==4.65.0
 triton==2.0.0
 typeguard==2.13.3
 typing_extensions==4.6.2
 tzdata==2023.3
 urllib3==1.26.16
+virtualenv==20.25.1
 visions==0.7.5
 Werkzeug==2.3.6
 wordcloud==1.9.2
