--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,8 @@ dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - blas=1.0=mkl
-  - ca-certificates=2023.01.10=h06a4308_0
+  - bzip2=1.0.8=h5eee18b_5
+  - ca-certificates=2024.3.11=h06a4308_0
   - freetype=2.12.1=h4a9f257_0
   - giflib=5.2.1=h5eee18b_3
   - intel-openmp=2021.4.0=h06a4308_3561
@@ -20,122 +21,59 @@ dependencies:
   - libpng=1.6.39=h5eee18b_0
   - libstdcxx-ng=11.2.0=h1234567_1
   - libtiff=4.5.0=h6a678d5_2
+  - libuuid=1.41.5=h5eee18b_0
   - libwebp=1.2.4=h11a3e52_1
   - libwebp-base=1.2.4=h5eee18b_1
   - lz4-c=1.9.4=h6a678d5_0
   - mkl=2021.4.0=h06a4308_640
-  - mkl-service=2.4.0=py38h7f8727e_0
-  - mkl_fft=1.3.1=py38hd3c417c_0
-  - mkl_random=1.2.2=py38h51133e4_0
+  - mkl-service=2.4.0=py311h5eee18b_0
+  - mkl_fft=1.3.1=py311h30b3d60_0
+  - mkl_random=1.2.2=py311hba01205_0
   - ncurses=6.4=h6a678d5_0
-  - numpy=1.23.5=py38h14f4228_0
-  - numpy-base=1.23.5=py38h31eccc5_0
-  - openssl=1.1.1t=h7f8727e_0
-  - pillow=9.4.0=py38h6a678d5_0
-  - pip=23.0.1=py38h06a4308_0
-  - python=3.8.16=h7a1cb2a_3
+  - numpy=1.23.5=py311h75bd12f_0
+  - numpy-base=1.23.5=py311h0ff3221_0
+  - openssl=1.1.1w=h7f8727e_0
+  - pillow=9.4.0=py311h6a678d5_0
+  - pip=23.0.1=py311h06a4308_0
+  - python=3.11.3=h7a1cb2a_0
   - readline=8.2=h5eee18b_0
-  - setuptools=66.0.0=py38h06a4308_0
+  - setuptools=66.0.0=py311h06a4308_0
   - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.41.2=h5eee18b_0
   - tk=8.6.12=h1ccaba5_0
-  - wheel=0.38.4=py38h06a4308_0
+  - tzdata=2024a=h04d1e81_0
+  - wheel=0.38.4=py311h06a4308_0
   - xz=5.2.10=h5eee18b_1
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.5=hc292b87_0
   - pip:
-      - absl-py==1.4.0
-      - antlr4-python3-runtime==4.9.3
-      - beautifulsoup4==4.12.2
-      - biopython==1.81
-      - boto3==1.28.1
-      - botocore==1.31.1
-      - cachetools==5.3.1
-      - certifi==2023.5.7
-      - charset-normalizer==3.1.0
-      - click==8.1.4
-      - cmake==3.26.3
-      - contourpy==1.0.7
-      - cycler==0.11.0
-      - filelock==3.12.0
-      - fire==0.5.0
-      - fonttools==4.39.4
-      - gdown==4.7.1
-      - genomic-benchmarks==0.0.9
-      - google-auth==2.19.1
-      - google-auth-oauthlib==1.0.0
-      - grpcio==1.54.2
-      - hydra-core==1.3.2
-      - idna==3.4
-      - imageio==2.31.1
-      - importlib-metadata==6.6.0
-      - importlib-resources==5.12.0
-      - jinja2==3.1.2
-      - jmespath==1.0.1
-      - joblib==1.2.0
-      - kiwisolver==1.4.4
-      - lazy-loader==0.2
-      - lit==16.0.5
-      - markdown==3.4.3
-      - markupsafe==2.1.2
-      - matplotlib==3.7.1
-      - medmnist==2.2.2
-      - mpmath==1.3.0
-      - multidict==6.0.4
-      - networkx==3.1
-      - nvidia-cublas-cu11==11.10.3.66
-      - nvidia-cuda-cupti-cu11==11.7.101
-      - nvidia-cuda-nvrtc-cu11==11.7.99
-      - nvidia-cuda-runtime-cu11==11.7.99
-      - nvidia-cudnn-cu11==8.5.0.96
-      - nvidia-cufft-cu11==10.9.0.58
-      - nvidia-curand-cu11==10.2.10.91
-      - nvidia-cusolver-cu11==11.4.0.1
-      - nvidia-cusparse-cu11==11.7.4.91
-      - nvidia-nccl-cu11==2.14.3
-      - nvidia-nvtx-cu11==11.7.91
-      - oauthlib==3.2.2
-      - omegaconf==2.3.0
-      - packaging==23.1
-      - pandas==2.0.2
-      - protobuf==4.23.2
-      - pyasn1==0.5.0
-      - pyasn1-modules==0.3.0
-      - pyparsing==3.0.9
-      - pysocks==1.7.1
-      - python-dateutil==2.8.2
-      - pytz==2023.3
-      - pywavelets==1.4.1
-      - pyyaml==6.0
-      - regex==2023.6.3
+      - annotated-types==0.6.0
+      - authlib==1.3.0
+      - certifi==2024.2.2
+      - cffi==1.16.0
+      - charset-normalizer==3.3.2
+      - click==8.1.7
+      - cryptography==42.0.5
+      - django-s3-file-field-client==1.0.1
+      - girder-cli-oauth-client==0.4.0
+      - humanize==4.9.0
+      - idna==3.6
+      - isic-cli==10.0.0
+      - isic-metadata==1.5.0
+      - markdown-it-py==3.0.0
+      - mdurl==0.1.2
+      - more-itertools==10.2.0
+      - packaging==24.0
+      - pycparser==2.22
+      - pydantic==2.6.4
+      - pydantic-core==2.16.3
+      - pygments==2.17.2
+      - pyxdg==0.28
       - requests==2.31.0
-      - requests-oauthlib==1.3.1
-      - rsa==4.9
-      - s3transfer==0.6.1
-      - sacremoses==0.0.53
-      - scikit-image==0.21.0
-      - scikit-learn==1.2.2
-      - scipy==1.10.1
-      - sentencepiece==0.1.99
-      - soupsieve==2.4.1
-      - sympy==1.12
-      - tensorboard==2.13.0
-      - tensorboard-data-server==0.7.0
-      - termcolor==2.3.0
-      - threadpoolctl==3.1.0
-      - tifffile==2023.4.12
-      - torch==2.0.1
-      - torch-tb-profiler==0.4.1
-      - torchdata==0.6.1
-      - torchmetrics==0.11.4
-      - torchtext==0.15.2
-      - torchvision==0.15.2
-      - tqdm==4.65.0
-      - triton==2.0.0
-      - typing-extensions==4.6.2
-      - tzdata==2023.3
-      - urllib3==1.26.16
-      - werkzeug==2.3.6
-      - yarl==1.9.2
-      - zipp==3.15.0
-prefix: /home/bay1989/miniconda3/envs/MA
+      - requests-toolbelt==1.0.0
+      - retryable-requests==0.1.2
+      - rich==13.7.1
+      - sentry-sdk==1.44.1
+      - tenacity==8.2.3
+      - typing-extensions==4.11.0
+      - urllib3==2.2.1
