--- a/environment.yml
+++ b/environment.yml
@@ -15,7 +15,7 @@ dependencies:
   - brotli-python=1.0.9=py311h6a678d5_7
   - bzip2=1.0.8=h5eee18b_5
   - ca-certificates=2024.3.11=h06a4308_0
-  - certifi=2024.2.2=py311h06a4308_0
+  - certifi=2024.2.2=pyhd8ed1ab_0
   - comm=0.2.2=pyhd8ed1ab_0
   - contourpy=1.2.0=py311hdb19cb5_0
   - cuda-cudart=12.1.105=0
@@ -101,6 +101,7 @@ dependencies:
   - libxcb=1.15=h7f8727e_0
   - libxkbcommon=1.0.1=h5eee18b_1
   - libxml2=2.10.3=hcbfbd50_0
+  - lightning-utilities=0.11.2=pyhd8ed1ab_0
   - llvm-openmp=14.0.6=h9e868ea_0
   - lz4-c=1.9.4=h6a678d5_0
   - markupsafe=2.1.3=py311h5eee18b_0
@@ -164,6 +165,7 @@ dependencies:
   - stack_data=0.6.2=pyhd8ed1ab_0
   - sympy=1.12=py311h06a4308_0
   - tk=8.6.12=h1ccaba5_0
+  - torchmetrics=1.3.2=pyhd8ed1ab_0
   - torchtriton=2.2.0=py311
   - torchvision=0.17.2=py311_cu121
   - tornado=6.3.3=py311h5eee18b_0
