--- a/environment.yml
+++ b/environment.yml
@@ -182,7 +182,9 @@ dependencies:
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.5=hc292b87_0
   - pip:
+      - absl-py==2.1.0
       - annotated-types==0.6.0
+      - antlr4-python3-runtime==4.9.3
       - authlib==1.3.0
       - cffi==1.16.0
       - chardet==5.2.0
@@ -190,14 +192,21 @@ dependencies:
       - click==8.1.7
       - cryptography==42.0.5
       - django-s3-file-field-client==1.0.1
+      - fsspec==2024.3.1
       - girder-cli-oauth-client==0.4.0
+      - grpcio==1.62.1
       - humanize==4.9.0
+      - hydra-core==1.3.2
       - idna==3.6
       - isic-cli==10.0.0
       - isic-metadata==1.5.0
+      - markdown==3.6
       - markdown-it-py==3.0.0
+      - masterarbeit==0.1.0
       - mdurl==0.1.2
       - more-itertools==10.2.0
+      - omegaconf==2.3.0
+      - protobuf==5.26.1
       - pycparser==2.22
       - pydantic==2.6.4
       - pydantic-core==2.16.3
@@ -207,4 +216,7 @@ dependencies:
       - rich==13.7.1
       - sentry-sdk==1.44.1
       - tenacity==8.2.3
+      - tensorboard==2.16.2
+      - tensorboard-data-server==0.7.2
       - urllib3==2.2.1
+      - werkzeug==3.0.2
