--- a/requirements.txt
+++ b/requirements.txt
@@ -1,135 +1,110 @@
-absl-py==1.4.0
+absl-py==2.1.0
+annotated-types==0.6.0
 antlr4-python3-runtime==4.9.3
-attrs==23.1.0
-beautifulsoup4==4.12.2
-biopython==1.81
-boto3==1.28.1
-botocore==1.31.1
-cachetools==5.3.1
-certifi==2024.2.2
-charset-normalizer==3.1.0
-click==8.1.4
-cmake==3.26.3
-contourpy==1.0.7
-coverage==7.4.3
-cycler==0.11.0
-dacite==1.8.1
-distlib==0.3.8
-filelock==3.13.1
-fire==0.5.0
-flake8==3.9.2
-fonttools==4.49.0
-gdown==4.7.1
-genomic-benchmarks==0.0.9
-google-auth==2.19.1
-google-auth-oauthlib==1.0.0
-grpcio==1.62.0
-htmlmin==0.1.12
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+Authlib==1.3.0
+Bottleneck @ file:///croot/bottleneck_1707864210935/work
+Brotli @ file:///work/ci_py311/brotli-split_1676830125088/work
+certifi @ file:///croot/certifi_1707229174982/work/certifi
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+contourpy @ file:///croot/contourpy_1700583582875/work
+cryptography==42.0.5
+cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
+debugpy @ file:///croot/debugpy_1690905042057/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+django-s3-file-field-client==1.0.1
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1704921103267/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
+filelock @ file:///croot/filelock_1700591183607/work
+fonttools==4.25.0
+fsspec==2024.3.1
+girder-cli-oauth-client==0.4.0
+gmpy2 @ file:///work/ci_py311/gmpy2_1676839849213/work
+grpcio==1.62.1
+humanize==4.9.0
 hydra-core==1.3.2
-idna==3.4
-ImageHash==4.3.1
-imageio==2.31.1
-importlib-metadata==6.6.0
-importlib-resources==5.12.0
-iniconfig==2.0.0
-iterative-stratification==0.1.7
-Jinja2==3.1.2
-jmespath==1.0.1
-joblib==1.2.0
-kiwisolver==1.4.4
-lazy_loader==0.2
-lit==16.0.5
-Markdown==3.4.3
-MarkupSafe==2.1.2
--e git+https://github.com/Tombo93/masterarbeit.git@09bee3009dc998e5a72d268830732aeef4fc8843#egg=Masterarbeit
-matplotlib==3.7.1
-mccabe==0.6.1
-medmnist==2.2.2
+idna==3.6
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1710971335535/work
+ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1708996548741/work
+ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1709559745751/work
+isic-cli==10.0.0
+isic-metadata==1.5.0
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
+Jinja2 @ file:///croot/jinja2_1706733616596/work
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1710255804825/work
+jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1710257359434/work
+kiwisolver @ file:///work/ci_py311/kiwisolver_1676827230232/work
+lightning-utilities @ file:///home/conda/feedstock_root/build_artifacts/lightning-utilities_1711597355069/work
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe @ file:///croot/markupsafe_1704205993651/work
+-e git+https://github.com/Tombo93/masterarbeit.git@b3fe69240d3b33592ab8009f336b2e642b8f46df#egg=Masterarbeit
+matplotlib @ file:///croot/matplotlib-suite_1698692105134/work
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
+mdurl==0.1.2
 mkl-fft==1.3.1
-mkl-random @ file:///tmp/build/80754af9/mkl_random_1626186064646/work
+mkl-random @ file:///work/ci_py311/mkl_random_1676828032909/work
 mkl-service==2.4.0
-mpmath==1.3.0
-multidict==6.0.4
-multimethod==1.9.1
-mypy==0.910
-mypy-extensions==0.4.4
-networkx==3.1
-numpy @ file:///croot/numpy_and_numpy_base_1672336185480/work
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
-oauthlib==3.2.2
+more-itertools==10.2.0
+mpmath @ file:///croot/mpmath_1690848262763/work
+munkres==1.1.4
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
+networkx @ file:///croot/networkx_1690561992265/work
+numexpr @ file:///work/ci_py311_2/numexpr_1679336657660/work
+numpy @ file:///work/ci_py311/numpy_and_numpy_base_1676823870601/work
 omegaconf==2.3.0
-packaging==23.1
-pandas==2.0.2
-pandas-profiling==3.6.6
-patsy==0.5.3
-phik==0.12.3
-pillow==10.2.0
-platformdirs==4.2.0
-pluggy==1.4.0
-protobuf==4.23.2
-py==1.11.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycodestyle==2.7.0
-pydantic==1.10.12
-pyflakes==2.3.1
-pyparsing==3.0.9
-PySocks==1.7.1
-pytest==6.2.5
-pytest-cov==2.12.1
-python-dateutil==2.8.2
-pytz==2023.3
-PyWavelets==1.4.1
-PyYAML==6.0
-regex==2023.6.3
-requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
-s3transfer==0.6.1
-sacremoses==0.0.53
-scikit-image==0.21.0
-scikit-learn==1.2.2
-scipy==1.10.1
-seaborn==0.12.2
-sentencepiece==0.1.99
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1710075952259/work
+pandas @ file:///croot/pandas_1709590491089/work/dist/pandas-2.2.1-cp311-cp311-linux_x86_64.whl#sha256=0a2793a31a0135a35735e1431d453a06186a3a7c607d9b441d9bd5f0fe4ded31
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+Pillow==9.4.0
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1706713388748/work
+ply==3.11
+prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1702399386289/work
+protobuf==5.26.1
+psutil @ file:///work/ci_py311_2/psutil_1679337388738/work
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
+pycparser==2.22
+pydantic==2.6.4
+pydantic_core==2.16.3
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
+pyparsing @ file:///work/ci_py311/pyparsing_1677811559502/work
+PyQt5==5.15.10
+PyQt5-sip @ file:///croot/pyqt-split_1698769088074/work/pyqt_sip
+PySocks @ file:///work/ci_py311/pysocks_1676822712504/work
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
+pytz @ file:///croot/pytz_1695131579487/work
+pyxdg==0.28
+PyYAML @ file:///croot/pyyaml_1698096049011/work
+pyzmq @ file:///croot/pyzmq_1705605076900/work
+requests @ file:///croot/requests_1707355572290/work
+requests-toolbelt==1.0.0
+retryable-requests==0.1.2
+rich==13.7.1
+sentry-sdk==1.44.1
+sip @ file:///croot/sip_1698675935381/work
 six @ file:///tmp/build/80754af9/six_1644875935023/work
-soupsieve==2.4.1
-statsmodels==0.14.0
-sympy==1.12
-tangled-up-in-unicode==0.2.0
-tensorboard==2.13.0
-tensorboard-data-server==0.7.0
-termcolor==2.3.0
-threadpoolctl==3.1.0
-tifffile==2023.4.12
-toml==0.10.2
-torch==2.0.1
-torch-tb-profiler==0.4.1
-torchdata==0.6.1
-torchmetrics==0.11.4
-torchtext==0.15.2
-torchvision==0.15.2
-tox==3.24.3
-tqdm==4.65.0
-triton==2.0.0
-typeguard==2.13.3
-typing_extensions==4.6.2
-tzdata==2023.3
-urllib3==1.26.16
-virtualenv==20.25.1
-visions==0.7.5
-Werkzeug==2.3.6
-wordcloud==1.9.2
-yarl==1.9.2
-ydata-profiling==4.5.1
-zipp==3.15.0
+stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+sympy @ file:///croot/sympy_1701397643339/work
+tenacity==8.2.3
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+torch==2.2.2
+torchmetrics @ file:///home/conda/feedstock_root/build_artifacts/torchmetrics_1710773712978/work
+torchvision==0.17.2
+tornado @ file:///croot/tornado_1696936946304/work
+tqdm @ file:///croot/tqdm_1679561862951/work
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1710254411456/work
+triton==2.2.0
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1712329955671/work
+tzdata @ file:///croot/python-tzdata_1690578112552/work
+urllib3==2.2.1
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+Werkzeug==3.0.2
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
