--- a/environment.yml
+++ b/environment.yml
@@ -200,6 +200,7 @@ dependencies:
       - idna==3.6
       - isic-cli==10.0.0
       - isic-metadata==1.5.0
+      - joblib==1.4.0
       - markdown==3.6
       - markdown-it-py==3.0.0
       - masterarbeit==0.1.0
@@ -214,9 +215,12 @@ dependencies:
       - requests-toolbelt==1.0.0
       - retryable-requests==0.1.2
       - rich==13.7.1
+      - scikit-learn==1.4.2
+      - scipy==1.13.0
       - sentry-sdk==1.44.1
       - tenacity==8.2.3
       - tensorboard==2.16.2
       - tensorboard-data-server==0.7.2
+      - threadpoolctl==3.4.0
       - urllib3==2.2.1
       - werkzeug==3.0.2
