--- a/environment.yml
+++ b/environment.yml
@@ -26,11 +26,11 @@ dependencies:
   - cuda-opencl=12.4.127=0
   - cuda-runtime=12.1.0=0
   - cycler=0.11.0=pyhd3eb1b0_0
-  - cyrus-sasl=2.1.28=h9c0eb46_1
+  - cyrus-sasl=2.1.28=h52b45da_1
   - dbus=1.13.18=hb2f20db_0
   - debugpy=1.6.7=py311h6a678d5_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - exceptiongroup=1.2.0=pyhd8ed1ab_2
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - exceptiongroup=1.2.0=py311h06a4308_0
   - executing=2.0.1=pyhd8ed1ab_0
   - expat=2.5.0=h6a678d5_0
   - ffmpeg=4.3=hf484d3e_0
@@ -46,10 +46,10 @@ dependencies:
   - gnutls=3.6.15=he1e5248_0
   - gst-plugins-base=1.14.1=h6a678d5_1
   - gstreamer=1.14.1=h5eee18b_1
-  - icu=58.2=he6710b0_3
+  - icu=73.1=h6a678d5_0
   - importlib-metadata=7.1.0=pyha770c72_0
   - importlib_metadata=7.1.0=hd8ed1ab_0
-  - intel-openmp=2021.4.0=h06a4308_3561
+  - intel-openmp=2023.1.0=hdb19cb5_46306
   - ipykernel=6.29.3=pyhd33586a_0
   - ipython=8.22.2=pyh707e725_0
   - jedi=0.19.1=pyhd8ed1ab_0
@@ -58,7 +58,7 @@ dependencies:
   - jupyter_client=8.6.1=pyhd8ed1ab_0
   - jupyter_core=5.7.2=py311h38be061_0
   - kiwisolver=1.4.4=py311h6a678d5_0
-  - krb5=1.20.1=h568e23c_1
+  - krb5=1.20.1=h143b758_1
   - lame=3.100=h7b6447c_0
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
@@ -71,13 +71,13 @@ dependencies:
   - libcublas=12.1.0.26=0
   - libcufft=11.0.2.4=0
   - libcufile=1.9.1.3=0
-  - libcups=2.4.2=ha637b67_0
+  - libcups=2.4.2=h2d74bed_1
   - libcurand=10.3.5.147=0
   - libcusolver=11.4.4.55=0
   - libcusparse=12.0.2.55=0
-  - libdeflate=1.17=h5eee18b_0
+  - libdeflate=1.17=h5eee18b_1
   - libedit=3.1.20230828=h5eee18b_0
-  - libffi=3.4.2=h6a678d5_6
+  - libffi=3.4.4=h6a678d5_0
   - libgcc-ng=11.2.0=h1234567_1
   - libglib=2.78.4=hdc74915_0
   - libgomp=11.2.0=h1234567_1
@@ -89,63 +89,64 @@ dependencies:
   - libnvjitlink=12.1.105=0
   - libnvjpeg=12.1.1.14=0
   - libpng=1.6.39=h5eee18b_0
-  - libpq=12.15=h37d81fd_1
-  - libsodium=1.0.18=h36c2ea0_1
+  - libpq=12.17=hdbd6064_0
+  - libsodium=1.0.18=h7b6447c_0
   - libstdcxx-ng=11.2.0=h1234567_1
   - libtasn1=4.19.0=h5eee18b_0
-  - libtiff=4.5.0=h6a678d5_2
+  - libtiff=4.5.1=h6a678d5_0
   - libunistring=0.9.10=h27cfd23_0
   - libuuid=1.41.5=h5eee18b_0
-  - libwebp=1.2.4=h11a3e52_1
-  - libwebp-base=1.2.4=h5eee18b_1
+  - libwebp=1.3.2=h11a3e52_0
+  - libwebp-base=1.3.2=h5eee18b_0
   - libxcb=1.15=h7f8727e_0
   - libxkbcommon=1.0.1=h5eee18b_1
-  - libxml2=2.10.3=hcbfbd50_0
+  - libxml2=2.10.4=hf1b16e4_1
   - lightning-utilities=0.11.2=pyhd8ed1ab_0
   - llvm-openmp=14.0.6=h9e868ea_0
   - lz4-c=1.9.4=h6a678d5_0
   - markupsafe=2.1.3=py311h5eee18b_0
-  - matplotlib=3.8.0=py311h06a4308_0
-  - matplotlib-base=3.8.0=py311ha02d727_0
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - mkl=2021.4.0=h06a4308_640
-  - mkl-service=2.4.0=py311h5eee18b_0
-  - mkl_fft=1.3.1=py311h30b3d60_0
-  - mkl_random=1.2.2=py311hba01205_0
+  - matplotlib=3.8.4=py311h06a4308_0
+  - matplotlib-base=3.8.4=py311ha02d727_0
+  - matplotlib-inline=0.1.6=py311h06a4308_0
+  - mkl=2023.1.0=h213fc3f_46344
+  - mkl-service=2.4.0=py311h5eee18b_1
+  - mkl_fft=1.3.8=py311h5eee18b_0
+  - mkl_random=1.2.4=py311hdb19cb5_0
   - mpc=1.1.0=h10f8cd9_1
   - mpfr=4.0.2=hb69a4c5_1
   - mpmath=1.3.0=py311h06a4308_0
   - munkres=1.1.4=py_0
-  - mysql=5.7.24=he378463_2
+  - mysql=5.7.24=h721c034_2
   - ncurses=6.4=h6a678d5_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
+  - nest-asyncio=1.6.0=py311h06a4308_0
   - nettle=3.7.3=hbbd107a_1
   - networkx=3.1=py311h06a4308_0
-  - numexpr=2.8.4=py311h802d673_0
-  - numpy=1.23.5=py311h75bd12f_0
-  - numpy-base=1.23.5=py311h0ff3221_0
+  - numexpr=2.8.7=py311h65dcdc2_0
+  - numpy=1.26.4=py311h08b1b3b_0
+  - numpy-base=1.26.4=py311hf175353_0
   - openh264=2.1.1=h4ff587b_0
-  - openssl=1.1.1w=h7f8727e_0
+  - openjpeg=2.4.0=h3ad879b_0
+  - openssl=3.0.13=h7f8727e_0
   - packaging=24.0=pyhd8ed1ab_0
   - pandas=2.2.1=py311ha02d727_0
   - parso=0.8.4=pyhd8ed1ab_0
   - pcre2=10.42=hebb0a14_0
   - pexpect=4.9.0=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
-  - pillow=9.4.0=py311h6a678d5_0
-  - pip=23.0.1=py311h06a4308_0
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - pillow=10.2.0=py311h5eee18b_0
+  - pip=23.3.1=py311h06a4308_0
   - platformdirs=4.2.0=pyhd8ed1ab_0
   - ply=3.11=py311h06a4308_0
-  - prompt-toolkit=3.0.42=pyha770c72_0
+  - prompt-toolkit=3.0.43=py311h06a4308_0
   - psutil=5.9.0=py311h5eee18b_0
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - pure_eval=0.2.2=pyhd3eb1b0_0
   - pygments=2.17.2=pyhd8ed1ab_0
   - pyparsing=3.0.9=py311h06a4308_0
   - pyqt=5.15.10=py311h6a678d5_0
   - pyqt5-sip=12.13.0=py311h5eee18b_0
   - pysocks=1.7.1=py311h06a4308_0
-  - python=3.11.3=h7a1cb2a_0
+  - python=3.11.8=h955ad1f_0
   - python-dateutil=2.9.0=pyhd8ed1ab_0
   - python-tzdata=2023.3=pyhd3eb1b0_0
   - python_abi=3.11=2_cp311
@@ -155,15 +156,16 @@ dependencies:
   - pytz=2023.3.post1=py311h06a4308_0
   - pyyaml=6.0.1=py311h5eee18b_0
   - pyzmq=25.1.2=py311h6a678d5_0
-  - qt-main=5.15.2=h5b8104b_9
+  - qt-main=5.15.2=h53bd1ea_10
   - readline=8.2=h5eee18b_0
   - requests=2.31.0=py311h06a4308_1
-  - setuptools=66.0.0=py311h06a4308_0
+  - setuptools=68.2.2=py311h06a4308_0
   - sip=6.7.12=py311h6a678d5_0
   - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.41.2=h5eee18b_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - sympy=1.12=py311h06a4308_0
+  - tbb=2021.8.0=hdb19cb5_0
   - tk=8.6.12=h1ccaba5_0
   - torchmetrics=1.3.2=pyhd8ed1ab_0
   - torchtriton=2.2.0=py311
@@ -174,11 +176,11 @@ dependencies:
   - typing_extensions=4.11.0=pyha770c72_0
   - tzdata=2024a=h04d1e81_0
   - wcwidth=0.2.13=pyhd8ed1ab_0
-  - wheel=0.38.4=py311h06a4308_0
-  - xz=5.2.10=h5eee18b_1
+  - wheel=0.41.2=py311h06a4308_0
+  - xz=5.4.6=h5eee18b_0
   - yaml=0.2.5=h7b6447c_0
   - zeromq=4.3.5=h6a678d5_0
-  - zipp=3.17.0=pyhd8ed1ab_0
+  - zipp=3.17.0=py311h06a4308_0
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.5=hc292b87_0
   - pip:
