Refactor of backdoor training & new config isic_base_7cls

--- a/conf/data/isic_base.yaml
+++ b/conf/data/isic_base.yaml
@@ -1,3 +1,4 @@
+id: isic_base
 data: ${hydra:runtime.cwd}/data/interim/isic/isic-base.npz
 metadata: ${hydra:runtime.cwd}/data/interim/isic/isic-base.csv
 
