--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -2,8 +2,13 @@ defaults:
   - data: isic_base
   - hparams: isic_base
   - preprocessing: isic_base
-  - reports: diagnosis
+  - reports: reports
   - _self_
 
 model:
-  path: ${hydra:runtime.cwd}/models/isic-base.pt
+  isic_base: ${hydra:runtime.cwd}/models/isic-base.pth
+  isic_backdoor: ${hydra:runtime.cwd}/models/isic-backdoor.pth
+
+backdoor:
+  id: isic_base
+  data: ${hydra:runtime.cwd}/data/processed//isic/isic-backdoor.npz
