--- a/conf/data/isic_base_7cls.yaml
+++ b/conf/data/isic_base_7cls.yaml
@@ -7,7 +7,7 @@ label_columns:
   extra_label: family_hx_mm
   poison_label: poison_label
 
-classes:
+diagnosis:
   acrochordon: 0
   keratosis: 1
   non_melanoma_skin_cancer: 2
