Added config setting for setting poisoning for whole poisoned class or just for poisoned class where family-history==True

--- a/conf/task/family_history.yaml
+++ b/conf/task/family_history.yaml
@@ -2,4 +2,4 @@ train: family_history
 test: family_history
 metrics: family_history
 num_classes: 2
-reports: ${hydra:runtime.cwd}/reports/isic/backdoor
+reports: ${hydra:runtime.cwd}/reports/isic/family-history
