--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -7,7 +7,7 @@ defaults:
   - _self_
 
 model:
-  isic_base: ${hydra:runtime.cwd}/models/isic-base.pth
+  isic_base: ${hydra:runtime.cwd}/models/ # isic-base.pth
   isic_backdoor: ${hydra:runtime.cwd}/models/isic-backdoor.pth
 
 backdoor:
