Added plotting for car charts

--- a/conf/plotting/plots.yaml
+++ b/conf/plotting/plots.yaml
@@ -1,3 +1,5 @@
+report_dir: ${hydra:runtime.cwd}/reports
+
 base_dirs: 
   backdoor: ${hydra:runtime.cwd}/reports/isic/backdoor
   family_history: ${hydra:runtime.cwd}/reports/isic/family-history
